threads + sounds + logger